<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <com.ymiaohuang.mycolck.AlarmView
                    android:id="@+id/tabAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/lvAlarmList"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" >
                    </ListView>

                    <Button
                        android:id="@+id/btnAddAlarm"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_alarm" />
                </com.ymiaohuang.mycolck.AlarmView>

                <com.ymiaohuang.mycolck.TimeView
                    android:id="@+id/tabTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </com.ymiaohuang.mycolck.TimeView>

                <com.ymiaohuang.mycolck.TimerView
                    android:id="@+id/tabTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/ettime"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="00"
                            android:textSize="75sp" />

                        <TextView
                            android:id="@+id/tvstatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/inputtime" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/btnstart"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/start" />

                        <Button
                            android:id="@+id/btnreset"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/reset" />
                    </LinearLayout>
                </com.ymiaohuang.mycolck.TimerView>

                <com.ymiaohuang.mycolck.StopWatch
                    android:id="@+id/tabStopWatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/tvminute"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="75sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text=":"
                                android:textSize="75sp" />

                            <TextView
                                android:id="@+id/tvsecond"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="75sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="."
                                android:textSize="75sp" />

                            <TextView
                                android:id="@+id/tvms"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textSize="75sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvstatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:text="@string/ready" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/btnstart"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/start" />

                        <Button
                            android:id="@+id/btnreset"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/reset" />
                    </LinearLayout>
                </com.ymiaohuang.mycolck.StopWatch>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</FrameLayout>